fixed header with z-index

--- a/css/css-positioning/css-positioning_layout-with-position/css/styles.css
+++ b/css/css-positioning/css-positioning_layout-with-position/css/styles.css
@@ -25,6 +25,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .header__text {
@@ -64,7 +65,6 @@ body {
 
 .card__heading {
   margin: 0 0 10px 0;
-  /* position: absolute; */
 }
 
 /**
